--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="header-container">
         <div class="main-header">
-            <a href="./index.html" id="logo">Gnree</a>
+            <a href="index.html" id="logo">Gnree</a>
 
             <div class="searchBarContainer">
                 <input type="text" id="searchbar" placeholder="Search" autocomplete="off">
