--- a/about.html
+++ b/about.html
@@ -27,20 +27,23 @@
             <div class="back-button">
                 <a href="javascript:history.back()">GO BACK</a>
             </div>
-            <h1 id="tHeader">LOL EXP SIMULATION:</h1><br>
-
     
-            <label for="" id="currentLevel">Current Level: 1</label><br><br>
-            <label for="" id="nextLevel">EXP LEVEL UP Required: 280 XP</label><br><br>
-            <label for="" id="currentEXP">Current EXP: 0 / 280</label><br><br>
-            <label for="" id="EXPGathered">EXP Gathered: 0</label><br><br>
-            <label for="" id="WaveCount">Normal Wave Count: 0</label><br><br>
-            <label for="" id="CannonWaveCount">Cannon Wave Count: 0</label><br><br>
-            <label for="" id="ClearedWaveCount">Current Cleared Wave Count: 0</label><br><br>
-            <label for="" id="NextWaveType">Next Current Wave Type: Normal Wave</label><br><br>
-            <br>
-            <br>
-            <button id="currentButton1">LEVEL UP</button>
+            <h1 id="tHeader">ABOUT:</h1>
+            <p>I am please to welcome anyone that visit this page</p>
+            <p>This site creation is just for my own little test</p>
+            <p>Anyone is free to use the site and copy it</p>
+            <p>Since i always believe that world is always ours</p>
+            <p>But fate and us prevents us from doing so</p>
+            <p>Therefore we are all responsible our actions</p>
+            <p>-Gnree</p><br>
+            <p>Dec 29, 2024</p>
+
+
+
+
+
+
+
 
         </div> 
     </div>
