--- a/icedmilkshake.html
+++ b/icedmilkshake.html
@@ -23,24 +23,35 @@
 
 
     <div class="body-container">
-        <div class="main-body">
+        <div class="main-body ">
             <div class="back-button">
                 <a href="javascript:history.back()">GO BACK</a>
             </div>
-            <h1 id="tHeader">LOL EXP SIMULATION:</h1><br>
-
     
-            <label for="" id="currentLevel">Current Level: 1</label><br><br>
-            <label for="" id="nextLevel">EXP LEVEL UP Required: 280 XP</label><br><br>
-            <label for="" id="currentEXP">Current EXP: 0 / 280</label><br><br>
-            <label for="" id="EXPGathered">EXP Gathered: 0</label><br><br>
-            <label for="" id="WaveCount">Normal Wave Count: 0</label><br><br>
-            <label for="" id="CannonWaveCount">Cannon Wave Count: 0</label><br><br>
-            <label for="" id="ClearedWaveCount">Current Cleared Wave Count: 0</label><br><br>
-            <label for="" id="NextWaveType">Next Current Wave Type: Normal Wave</label><br><br>
-            <br>
-            <br>
-            <button id="currentButton1">LEVEL UP</button>
+            <h1 id="tHeader">ICE MILK SHAKE:</h1>
+
+            <pre>
+                to make ice milk shake
+                you would need:
+            </pre>
+            <pre>
+                Ingridients:
+                -Milk or (Melted) Milk Powder
+                -Sugar (Optional)
+                -Ice or Crushed Ice
+            </pre>
+            <pre>
+                Instructions:
+                1. Get a cup, put the Milk/Melted Milk Powder (and sugar if preferred.)
+                2. Put the ice/crushed ice next.
+                3. Add Water but dont fill it all the way up (The ice will.)
+            </pre>
+
+
+
+
+
+
 
         </div> 
     </div>
