--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./index.html" id="logo">Gnree</a>
 
             <div class="searchBarContainer">
-                <input type="text" id="searchbar" placeholder="Search" autocomplete="off">
+                <input type="text" id="searchbar" placeholder="Recherche" autocomplete="off">
                 <div id="suggestions">
                 </div>
             </div>
@@ -25,8 +25,8 @@
 
 
     <div class="body-container main-page-container">
-        <div class="main-body main-page" id="main-body">
-            <h1 id="tHeader">TAGS LINKS:</h1><br>
+        <div class="main-body main-page" id="search-function">
+            <h1 id="tHeader">PAGES:</h1><br>
         </div>
     </div>
 
