--- a/lolmemo_1424.html
+++ b/lolmemo_1424.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Gnree</title>
+    <title>Gnree Simulation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,36 +19,37 @@
                 </div>
             </div>
         </div>
-    </div><br><br><br><br><br>
+    </div><br><br>
 
-    <div class="linkSearchContainer">
-        <input type="text" id="linkSearch" placeholder="Search for keywords" autocomplete="off">
-        <div id="linkSuggestions">
-        </div>
-    </div>
 
-    <div class="body-container main-page-container">
 
-        <div class="main-body main-page" id="linkSection">
+
+    <div class="body-container">
+        <div class="main-body">
             <div class="back-button">
                 <a href="javascript:history.back()">GO BACK</a>
             </div>
-            <h1 id="tHeader">LINKS:</h1>
-        </div>
+
+    
+            <h1 id="tHeader">INSERT TITLE:</h1>
+
+
+
+
+
+
+
+
+
+        </div> 
     </div>
 
+    
 
 
 
 
-
-
-
-
-<script src="./index.js"></script>
-<script src="./searchbar.js"></script>
-<script src="./linksearch.js"></script>
-<script src="./attributes.js"></script>
-
+<script src="index.js"></script>
+<script src="searchbar.js"></script>
 </body>
 </html>
