--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="./links.css">
 </head>
 <body>
+
+
+    <div id="leftside"></div>
+    <div id="rightside"></div>
+
+
     
 
     <div id="headerWrapper">
@@ -22,22 +28,30 @@
                 </div>
             </div>
         </div>
-    </div><br><br>
+    </div><br><br><br><br><br><br><br>
+
+
 
 
     <div id="return_div"></div>
-    <h1 id="index-header">LINKS:</h1><br>
     <div id="links">
     </div>
 
     <div id="shadow_wrapperOff">
         <div id="pop_up">
-            <button id="close_btn">CLOSE</button>
+            <button id="close_btn">X</button>
             <h1 id="pop_upTitle">Title</h1>
         </div>
     </div>
 
 
+
+    <script>
+
+        var char1 = document.getElementById("background1")
+
+        
+    </script>
 
 
 
